deleted some links from header

--- a/service-details.html
+++ b/service-details.html
@@ -16,8 +16,8 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/responsive.css">
         <link rel="stylesheet" href="assets/css/theme-dark.css">
-        <title> Healthcare Clinic & Doctor HTML Template</title>
-        <link rel="icon" type="image/png" href="assets/img/favicon.png">
+        <title> Example Clinic & Doctor</title>
+        <!-- <link rel="icon" type="image/png" href="assets/img/favicon.png"> -->
     </head>
     <body>
         <div class="loader" style="display: none;">
@@ -86,14 +86,16 @@
         <div class="navbar-area sticky-top">
             <div class="mobile-nav">
                 <a href="index.html" class="logo">
-                    <img src="assets/img/logo-two.png" alt="Logo">
+                    <!-- <img src="assets/img/logo-two.png" alt="Logo"> -->
+                    <h2 style="color:#fff ;">LOGO</h2>
                 </a>
             </div>
             <div class="main-nav">
                 <div class="container">
                     <nav class="navbar navbar-expand-md navbar-light">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/img/logo.png" alt="Logo">
+                            <!-- <img src="assets/img/logo.png" alt="Logo"> -->
+                            <h2>LOGO</h2>
                         </a>
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                             <ul class="navbar-nav">
@@ -155,34 +157,7 @@
                                     <a href="contact.html" class="nav-link">Contact Us</a>
                                 </li>
                             </ul>
-                            <div class="nav-srh">
-                                <div class="search-toggle">
-                                    <button class="search-icon icon-search">
-                                        <i class="icofont-search-1"></i>
-                                    </button>
-                                    <button class="search-icon icon-close">
-                                        <i class="icofont-close"></i>
-                                    </button>
-                                </div>
-                                <div class="search-area">
-                                    <form>
-                                        <input
-                                            type="text"
-                                            class="src-input"
-                                            id="search-terms"
-                                            placeholder="Search here..."
-                                        >
-                                        <button
-                                            type="submit"
-                                            name="submit"
-                                            value="Go"
-                                            class="search-icon"
-                                        >
-                                            <i class="fa-regular fa-magnifying-glass"></i>
-                                        </button>
-                                    </form>
-                                </div>
-                            </div>
+                            
                         </div>
                     </nav>
                 </div>
